@startuml ToBeクラス図_v3_Phaserチーム

title Phaser層クラス図（MVP）- Phaserチーム担当

' ===========================
' Phaserチームの担当範囲
' ===========================
' - Phaser Scenes（BootScene, RoomScene, UIScene）
' - Characters（PlayerCharacter, CatCharacter）
' - Interactive Objects（ToyShelfObject, Toy）
' - UI Components（InputController, DialogSystem等）
' - Asset Management（AssetLoader, AnimationLoader）
' - Utilities（CollisionDetection, Point）
' - Global（GlobalRegistry, GameTimeManager）
' ===========================

' ===========================
' Application Layer（Domainチーム提供）
' ===========================

package "Application Layer (Domainチーム)" {
  class GameController <<External>> {
    + tick(input: PlayerInput): void
    + view(): GameView
  }

  interface PlayerInput <<External>> {
    direction?: Direction
    interact?: boolean
    choice?: string
    emotion?: EmotionData
  }

  interface GameView <<External>> {
    phase: GamePhase
    time: number
    day: number
    player: PlayerViewModel
    cat: CatViewModel
    currentEvent: GameEvent | null
    catStatus: CatStatus
    playerStats: PlayerStats
  }

  interface PlayerViewModel <<External>> {
    x: number
    y: number
    animation: string
    hasToy: boolean
  }

  interface CatViewModel <<External>> {
    x: number
    y: number
    state: CatState
    mood: CatMood
  }

  enum Direction <<External>> {
    UP, DOWN, LEFT, RIGHT, NONE
  }

  enum CatState <<External>> {
    SLEEPING, SITTING, STANDING, WALKING
    RUNNING, MEOWING, PLAYING
  }

  enum CatMood <<External>> {
    NEUTRAL, HAPPY, ANGRY, SCARED, SLEEPY
  }

  enum GamePhase <<External>> {
    NIGHT_PREP, MIDNIGHT_EVENT
    MORNING_OUTRO, GAME_END
  }
}

note top of "Application Layer (Domainチーム)"
  【Domainチームが提供】
  - GameController: tick()とview()のみ使用
  - 各種インターフェース・enum: Domainチームが定義
  - Phaserチームは参照のみ（実装はDomainチーム）
end note

' ===========================
' Global - グローバル設定層
' ===========================

package "Global" as PkgGlobal {
  class GlobalRegistry {
    - static instance: GlobalRegistry
    + getInstance(): GlobalRegistry
    + getGameTimeManager(): GameTimeManager
  }

  class GameTimeManager {
    + gt: number
    + rt: number
    + timeScale: number
    + updateOneFrame(): void
    + setTimeScale(scale: number): void
  }

  GlobalRegistry --> GameTimeManager
}

note top of PkgGlobal
  【Global層の役割】
  - ゲーム全体で共有する設定・状態
  - シングルトンパターン
  - Phaserチームが実装・管理
end note

' ===========================
' Phaser Scenes - シーン層
' ===========================

package "Phaser Scenes" as PkgPhaserScenes {
  class BootScene {
    - scenarioId: string
    - controller: GameController
    + init(data: GameStartParams): void
    + preload(): void
    + create(): void
    + onGameEnd(): void
  }

  class RoomScene {
    - controller: GameController
    - background: Phaser.GameObjects.Image
    - player: PlayerCharacter
    - cat: CatCharacter
    - toyShelf: ToyShelfObject
    - interactionTargets: InteractiveObject[]
    + create(): void
    + update(delta: number): void
    + enablePlayerControl(): void
    + disablePlayerControl(): void
    + checkInteractionRange(targetId: string): boolean
    + isInInteractionRange(targetId: string): boolean
    + updatePlayerPosition(x: number, y: number): void
    + updatePlayerAnimation(animation: string): void
    + updatePlayerSprite(sprite: string): void
    + updateCatAnimation(animation: string): void
    + playSoundLoop(soundKey: string): void
    + stopSoundLoop(): void
    + playPlayingAnimation(duration: number): void
    + transitionToMorning(): void
    + transitionToNextDayOrGameEnd(): void
    + callReactCallback(result: GameResult): void
    + destroyPhaserGame(): void
  }

  class UIScene {
    - dialogBox: Phaser.GameObjects.Container
    - statusBars: StatusDisplay
    - timeDisplay: Phaser.GameObjects.Text
    + showEvent(event: GameEvent): void
    + showChoices(choices: Choice[]): void
    + hideChoices(): void
    + showNightPhaseText(): void
    + displaySleepButton(): void
    + displayEventText(): void
    + displayCatStatus(descriptions: string[]): void
    + showActionGuide(text: string): void
    + updateActionGuide(text: string): void
    + showInteractionPrompt(): void
    + displayPrompt(text: string): void
    + showConsequence(): void
    + displayConsequenceText(text: string): void
    + showEmotionInput(): void
    + showMorningPhaseText(): void
    + displaySleepSummary(hours: number): void
    + displayWorkButton(): void
    + showGameEndScreen(result: GameResult): void
    + updateStatus(status: CatStatus): void
    + hideDialog(): void
  }

  BootScene --> GameController : creates & uses
  RoomScene --> GameController : uses
  RoomScene --> PlayerCharacter
  RoomScene --> CatCharacter
  RoomScene --> ToyShelfObject
  RoomScene ..> UIScene : overlays
  UIScene --> DialogSystem
  UIScene --> StatusDisplay
}

note top of PkgPhaserScenes
  【Phaser Scenes層の役割】
  - BootScene: 起動・初期化・終了処理
  - RoomScene: ゲームメイン画面（全フェーズ対応）
  - UIScene: UI表示専用（オーバーレイ）

  【重要】
  - NightPhaseScene/MorningPhaseSceneは廃止
  - RoomScene + UIScene で全フェーズを実現
end note

' ===========================
' Characters - キャラクター層
' ===========================

package "Characters" as PkgCharacters {
  abstract class Character {
    # sprite: Phaser.GameObjects.Sprite
    # x: number
    # y: number
    # currentAnimation: string
    + move(direction: Direction): void
    + playAnimation(name: string): void
    + setPosition(x: number, y: number): void
  }

  class PlayerCharacter extends Character {
    - isMoving: boolean
    - inputController: InputController
    + update(delta: number): void
  }

  class CatCharacter extends Character {
    - state: CatState
    - mood: CatMood
    + setState(state: CatState): void
    + setMood(mood: CatMood): void
    + playStateAnimation(): void
    + startEscapeBehavior(): void
    + playExcitedAnimation(): void
  }

  Character --> Direction
  CatCharacter --> CatState
  CatCharacter --> CatMood
}

note top of PkgCharacters
  【Characters層の役割】
  - PlayerCharacter: プレイヤーキャラの描画・操作
  - CatCharacter: 猫キャラの描画・AI行動

  【Domain層との関係】
  - CatState/CatMood: Domain層が定義（参照のみ）
  - Direction: Domain層が定義（参照のみ）
end note

' ===========================
' Interactive Objects - 相互作用オブジェクト
' ===========================

package "Interactive Objects" as PkgInteractiveObjects {
  abstract class InteractiveObject {
    # sprite: Phaser.GameObjects.Sprite
    # position: Point
    # id: string
    + {abstract} onInteract(action: InteractionAction): void
    + getPosition(): Point
  }

  class ToyShelfObject extends InteractiveObject {
    - toys: Toy[]
    + onInteract(action: InteractionAction): void
    + getToy(): Toy
  }

  class Toy {
    + type: ToyType
    + sprite: Phaser.GameObjects.Sprite
  }

  enum ToyType {
    BALL
    MOUSE
    FEATHER
  }

  enum InteractionAction <<External>> {
    CATCH, PET, PICK_UP, PLAY
  }

  ToyShelfObject --> Toy
  Toy --> ToyType
  InteractiveObject --> Point
  InteractiveObject ..> InteractionAction
}

note top of PkgInteractiveObjects
  【Interactive Objects層の役割】
  - ToyShelfObject: おもちゃ棚の実装
  - Toy: おもちゃの実装

  【Domain層との関係】
  - InteractionAction: Domain層が定義（参照のみ）
  - ToyShelfObject/ToyはDomain層のインターフェースを実装
end note

' ===========================
' UI Components - UI要素
' ===========================

package "UI Components" as PkgUIComponents {
  class InputController {
    - scene: Phaser.Scene
    - cursors: Phaser.Types.Input.Keyboard.CursorKeys
    - wasd: object
    - spaceKey: Phaser.Input.Keyboard.Key
    + collectInput(): PlayerInput
    + getMovementDirection(): Direction
    + isInteractPressed(): boolean
  }

  class DialogSystem {
    - container: Phaser.GameObjects.Container
    - textBox: Phaser.GameObjects.Text
    - choiceButtons: Phaser.GameObjects.Container[]
    + show(text: string): void
    + showWithChoices(text: string, choices: Choice[]): void
    + hide(): void
    + onChoiceClick(index: number): void
  }

  class StatusDisplay {
    - container: Phaser.GameObjects.Container
    - bars: ProgressBar[]
    + update(status: CatStatus): void
    + animateChange(param: string, oldValue: number, newValue: number): void
  }

  class ProgressBar {
    - background: Phaser.GameObjects.Rectangle
    - fill: Phaser.GameObjects.Rectangle
    - label: Phaser.GameObjects.Text
    - maxValue: number
    - currentValue: number
    + setValue(value: number): void
    + animateTo(targetValue: number, duration: number): void
  }

  class Point {
    + x: number
    + y: number
  }

  InputController --> Direction
  InputController ..> PlayerInput : generates
  StatusDisplay --> ProgressBar
}

note top of PkgUIComponents
  【UI Components層の役割】
  - InputController: キーボード入力 → PlayerInput変換
  - DialogSystem: イベントテキスト・選択肢表示
  - StatusDisplay: 猫のステータスバー表示
  - Point: 座標を表す値オブジェクト

  【すべてPhaser内で実装】
  - Reactコンポーネントは使用しない
end note

' ===========================
' Asset Management - アセット管理
' ===========================

package "Asset Management" as PkgAssetManagement {
  class AssetLoader {
    - scene: Phaser.Scene
    - manifestPath: string
    + loadAll(): void
    + loadBackground(): void
    + loadCharacters(): void
    + loadObjects(): void
    + loadUI(): void
  }

  class AnimationLoader {
    - scene: Phaser.Scene
    + loadPlayerAnimations(): void
    + loadCatAnimations(): void
  }

  AssetLoader --> BootScene : used by
  AnimationLoader --> BootScene : used by
}

note top of PkgAssetManagement
  【Asset Management層の役割】
  - AssetLoader: 画像・音声などの読み込み
  - AnimationLoader: アニメーションの設定

  【MVP範囲】
  - 初期はシンプルな図形orフリー素材
  - プレースホルダーで実装し、後で差し替え可能
end note

' ===========================
' Utilities - ユーティリティ
' ===========================

package "Utilities" as PkgUtilities {
  class CollisionDetection {
    + {static} checkCollision(obj1: GameObject, obj2: GameObject): boolean
    + {static} getDistance(pos1: Point, pos2: Point): number
    + {static} isInRadius(center: Point, target: Point, radius: number): boolean
  }

  CollisionDetection --> Point
}

note top of PkgUtilities
  【Utilities層の役割】
  - CollisionDetection: 当たり判定・距離計算

  【使用箇所】
  - RoomScene.checkInteractionRange()
  - CatCharacter.startEscapeBehavior()
end note

' ===========================
' Reactチームとの境界
' ===========================

package "React Layer (Interface)" as PkgReactInterface {
  interface GameStartParams <<External>> {
    scenarioId: string
  }

  interface GameResult <<External>> {
    scenarioId: string
    completed: boolean
    playerStats: PlayerStats
    finalCatStatus: CatStatus
    eventHistory: EventRecord[]
    report: Report
  }

  note right of GameStartParams
    Reactチーム → Phaserチーム
    ゲーム起動時のパラメータ
  end note

  note right of GameResult
    Phaserチーム → Reactチーム
    ゲーム終了時の結果データ
  end note
}

' ===========================
' パッケージ間の関係性
' ===========================

' Characters → UI Components
PkgCharacters.PlayerCharacter --> PkgUIComponents.InputController

' Asset Management → Phaser Scenes
PkgAssetManagement.AssetLoader --> PkgPhaserScenes.BootScene : used by
PkgAssetManagement.AnimationLoader --> PkgPhaserScenes.BootScene : used by

' Phaser Scenes → Utilities
PkgPhaserScenes.RoomScene ..> PkgUtilities.CollisionDetection : uses

' Phaser Scenes → Global
PkgPhaserScenes.RoomScene --> PkgGlobal.GlobalRegistry : uses
PkgPhaserScenes.BootScene --> PkgGlobal.GlobalRegistry : uses

' Phaser Scenes → React Interface
PkgPhaserScenes.BootScene ..> PkgReactInterface.GameStartParams : receives
PkgPhaserScenes.BootScene ..> PkgReactInterface.GameResult : sends

' ===========================
' 凡例
' ===========================

legend right
  **凡例**
  - <<External>>: 他チーム提供のクラス・インターフェース
  - 実線矢印 (-->): 依存・保持
  - 点線矢印 (..>): 使用・参照

  **Phaserチームの担当範囲**
  ✅ Phaser Scenes（BootScene, RoomScene, UIScene）
  ✅ Characters（PlayerCharacter, CatCharacter）
  ✅ Interactive Objects（ToyShelfObject, Toy）
  ✅ UI Components（InputController, DialogSystem等）
  ✅ Asset Management（AssetLoader, AnimationLoader）
  ✅ Utilities（CollisionDetection, Point）
  ✅ Global（GlobalRegistry, GameTimeManager）

  **依存方向**
  - Phaser → Application（GameController）
  - Phaser → Domain（enum/インターフェース参照）
  - Phaser ← React（起動時・終了時のみ）

  **重要な設計原則**
  - GameControllerへの依存はtick()とview()のみ
  - Domain層のenum（CatState等）を参照
  - すべてのゲーム内UIはPhaser実装
  - Reactコンポーネントは使用しない
end legend

@enduml
